--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <style>
+    #app{
+      background-color: #2a2a2a;
+    }
+  </style>
 </head>
 
 <body>
